Rajout des touches o p F2 et echap

--- a/dossier/Readme.tex
+++ b/dossier/Readme.tex
@@ -60,8 +60,12 @@
 		\begin {itemize} 
 			\item[\textbf{u}] Permet aux toupies de se déplacer dans l'espace (appuyez à nouveau pour annuler).
 			\item[\textbf{y}] Affiche la \emph{trace} de la toupie (prolongement du vecteur (point de contact - centre de gravité)).
-			\item[\textbf{w}] Lancement d'une balle de couleur aléatoire.
-			\item[\textbf{t}] Lancement de l'option \emph {WTF} qui met l'arène en plein écran et chamboule le programme en cours.
+			\item[\textbf{w}] Lance d'une balle de couleur aléatoire.
+			\item[\textbf{t}] Lance de l'option \emph {WTF} qui met l'arène en plein écran et chamboule le programme en cours.
+			\item[\textbf{o}] Diminue le dt pour une meilleure précision.
+			\item[\textbf{p}] Augmente le dt.
+			\item[\textbf{F2}] Active le mode plein écran.
+			\item[\textbf{ECHAP}] Quitte le programme.
 			
 		\end {itemize}
 	\subsection {Déplacement de la caméra}
