--- a/dossier/Readme.tex
+++ b/dossier/Readme.tex
@@ -14,6 +14,18 @@
 \title{\textbf{\underline{Projet Beyblade}}}
 \maketitle
 
+\section {Réponses}
+	\begin {enumerate}
+		\item On a fait tout ce qui était demandé ou suggéré dans le cours (sauf la caméra collée à la toupie). Plusieurs extensions de notre propre initiative ont également été rajoutées: 
+			\begin {itemize} 
+				\item authenticité des sauvegardes avec le hashage, 
+				\item possibilité de lancer des balles (touche \emph{w}),
+				\item un mode WTF (touche \emph{t}).
+			\end {itemize}
+		Remarques: Toupie Générale marche seulement sur un court laps de temps et Énergétique fait une boucle infinie (une exception est lancée et catchée). De plus, certains invariants ne le sont pas tant que ça.
+		\item Oui, le programme est axée sur le graphisme. La version texte n'est utilisée que pour les tests. La bibliothèque graphique est Qt 5.14.1
+		\item Environ 7h.
+	\end {enumerate}
 \section {Descriptif du projet}
 	\subsection{Introduction}
 		Le projet Beyblade, dont le nom est issu d'un dessin animé relatant la vie de valeureux combattants ayant pour uniques armes des toupies, a pour objectif principal de permettre à l'utilisateur d'observer des toupies de formes différentes évoluer selon les valeurs initiales et les intégrateurs numériques de son choix parmi les choix suivants: 
@@ -29,7 +41,7 @@
 	\subsection {Intégrateurs:}
 		\begin {itemize} 
 			\item Euler-Crommer (pour des équations du 1\ier{} et 2\ieme{} degré)
-			\item Newmark (uniquement 2\ieme{}
+			\item Newmark (uniquement 2\ieme{} degré)
 			\item Runge-Kutta (pour le 1\ier{} et 2\ieme{} degré)
 		\end {itemize} 
 	\textbf {Remarques: }Toupie Générale et Énergétique Conique ont quelques soucis avec leurs équations d'évolution. L'intégrateur d'Euler-Crommer ne semble pas être adapté à Toupie Chinoise qui diverge rapidement. 
@@ -75,6 +87,7 @@
 			\item[\textbf{s}] Dézoom.
 			\item[\textbf{q}] Tourne la caméra dans le sens anti-horloger.
 			\item[\textbf{d}] Tourne la caméra dans le sens horloger.
+			\item[\textbf{h}] Réinitialise la caméra.
 			\item Les touches\emph {flèche directionnelle} permettent quant à elles d'évoluer dans le repère sphérique centré à l'origine.
 			\item La souris (en maintenant le clique gauche) permet également de déplacer la caméra.
 		\end{itemize}
@@ -94,7 +107,7 @@
 			Une fenêtre apparait. Sélectionnez la toupie de votre choix pour obtenir des informations.
 	\subsection {Exécution des tests}
 \section{Développé avec}
-	Le projet Beyblade a été codé en \emph{C++}  depuis l'\emph{IDE Qt Creator} où plusieurs de ses bibliothèques internes furent utilisées.
+	Le projet Beyblade a été codé en \emph{C++}  depuis l'IDE \emph{Qt Creator, version 5.14.1,} où plusieurs de ses bibliothèques furent utilisées.
 	
 \section {Auteurs}
 	\begin{itemize}
